# biomes-voxeloo-py

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  biomes.cpp  blocks.cpp  culling.cpp  main.py  meshes.cpp  meshes.hpp  primitives.cpp  pyproject.toml  rasterization.cpp  runs.cpp  spatial.cpp
include/py_ext/: meshes.hpp
src/: biomes.cpp  blocks.cpp  culling.cpp  ext.cpp  galois.cpp  geometry.cpp  meshes.cpp  noise.cpp  rays.cpp  runs.cpp  shards.cpp  spatial.cpp  tensors.cpp  voronoi.cpp  voxels.cpp
src/VoxelooPy/: __init__.py  __init__.pyi  biomes.pyi  blocks.pyi  core.pyi  culling.pyi  galois.pyi  geometry.pyi  meshes.pyi  noise.pyi  primitives.pyi  rasterization.pyi  rays.pyi  runs.pyi  shards.pyi  spatial.pyi  tensors.pyi  voronoi.pyi  voxels.pyi
src/VoxelooPy/galois/: __init__.pyi  blocks.pyi  csg.pyi  florae.pyi  groups.pyi  lighting.pyi  material_properties.pyi  sbo.pyi  shapes.pyi  terrain.pyi  transforms.pyi  water.pyi
src/VoxelooPy/primitives/: __init__.pyi  xy.pyi  xyz.pyi
